Adding link to urbanacro

--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -6,17 +6,17 @@
     </div>
     <section id="hero" class="hero-section bg1 bg-cover window-height light-text">
         <ul class="socials-nav">
-            <li class="socials-nav-item"><a href="https://www.facebook.com/events/1798993360240371/"><span class="fa fa-facebook"></span></a></li>
+            <li class="socials-nav-item"><a href="https://www.facebook.com/events/745099830608019"><span class="fa fa-facebook"></span></a></li>
             <li class="socials-nav-item"><a href="https://www.instagram.com/urban.acro"><span class="fa fa-instagram"></span></a></li>
         </ul>
         <div class="heading-block centered-block align-center">
             <div class="container">
                     <h5 class="heading-alt" style="margin-bottom: 8px;"><span class="fa fa-calendar-o base-clr-txt"></span><span style="background-color: rgba(254, 73, 24, 1)">{% tinycontent_simple 'urban_general_date' %}</span><span class="fa fa-map-marker base-clr-txt" style="margin-left: 14px;"></span><span style="background-color: rgba(254, 73, 24, 1)">Zürich, CH</span></h5>
                     <h1 class="extra-heading" >Urban Acro Festival</h1>
-                    <h6 class="thin base-font" style="background-color: rgba(254, 73, 24, 1)">What does a dyslexic cow say? <strong>OOoooM</strong>.❤</h6>
+                    <h6 class="thin base-font" style="background-color: rgba(254, 73, 24, 1)">The volume of a pizza with radius z and uniform thickness a is pi zz a. ❤</h6>
                 <div class="btns-container">
                     <!-- <a href="#" class="btn btn-md" data-modal-link="email-ticket">REGISTER</a> -->
-                    <a href="https://acrolama.com/events/urban-acro-festival-2022" class="btn btn-md" >Register</a>
+                    <a href="https://urbanacro.com/events/urban-acro-festival-2023" class="btn btn-md" >Register</a>
                 </div>
             </div>
         </div>
@@ -46,7 +46,7 @@
                             <li class="navigation-item"><a href="#contacts" class="navigation-link">Location</a></li>
                         </ul>
                         <!-- <a data-modal-link="email-ticket" class="pull-right buy-btn">Register</a> -->
-                        <a href="https://acrolama.com/events/urban-acro-festival-2022/" class="pull-right buy-btn" >Register</a>
+                        <a href="https://urbanacro.com/events/urban-acro-festival-2023/" class="pull-right buy-btn" >Register</a>
                     </div>
                 </div>
             </div>
@@ -122,7 +122,7 @@
 
                     <div id="horizontal_tab3" class="tab-pane fade">
                         <div class="col-sm-5 images-column">
-                            <img src="{% static "urbanacro/images/acrofestival_extra_dj.JPG" %}" alt="" class="img-responsive" />
+                            <img src="{% static "urbanacro/images/acrofestival_extra_dj.jpg" %}" alt="" class="img-responsive" />
                         </div>
                         <div class="col-sm-7 align-left">
                             <h6>What's included</h6>
@@ -841,7 +841,7 @@
                                 <li><span class="fa fa-check check-icon"></span>Saturday Night Event</li>
                             </ul>
                         </div>
-                        <a href="https://acrolama.com/events/urban-acro-festival-2022" class="btn btn-lg btn-white" >Register</a>
+                        <a href="https://urbanacro.com/events/urban-acro-festival-2023" class="btn btn-lg btn-white" >Register</a>
                     </div>
                 </div>
             </div>
@@ -868,8 +868,8 @@
             <br/>
 
             <div class="sponsors">
-                <div class="sponsor big"><a href="https://www.urbanacro.com/"><img src="{% static 'urbanacro/images/sponsors/acrolama.png' %}" alt="Acrolama as host of the Urban Acro Festival"></a></div>
-                <div class="sponsor big"><a href="https://zirkusquartier.ch/"><img src="{% static 'urbanacro/images/sponsors/chnopf.png' %}" alt="Zirkus Quartier colaborator of the Urban Acro festival organized by Acrolama"></a></div>
+                <div class="sponsor big"><a href="https://www.urbanacro.com/"><img src="{% static 'urbanacro/images/sponsors/urbanacro.png' %}" alt="Urbanacro as host of the Urban Acro Festival"></a></div>
+                <div class="sponsor big"><a href="https://zirkusquartier.ch/"><img src="{% static 'urbanacro/images/sponsors/chnopf.png' %}" alt="Zirkus Quartier colaborator of the Urban Acro festival organized by Urbanacro"></a></div>
             </div>
 
         </div>
@@ -950,7 +950,7 @@
                    </select>
                 </fieldset>
                 <fieldset class="col-sm-12">
-                    <input id="privacy" name="privacy" type="checkbox" required><label for="privacy">I read & agree with <a href="https://acrolama.com/info/UrbanAcroFestivalPolicy/">Return Policies</a> </label>
+                    <input id="privacy" name="privacy" type="checkbox" required><label for="privacy">I read & agree with <a href="https://urbanacro.com/info/UrbanAcroFestivalPolicy/">Return Policies</a> </label>
                     <br />
                     <br />
                 </fieldset>
