--- a/acrofestival/templates/pages/winteracro/index.html
+++ b/acrofestival/templates/pages/winteracro/index.html
@@ -4,7 +4,7 @@
 <div id="wrapper">
 <!-- Header -->
     <header id="header" class="alt">
-            <span class="logo"><img src="{% static "winteracro/images/logo_vek.svg"%}" alt="" /></span>
+            <span class="logo"><img src="{% static "winteracro/images/logo_2024.png"%}" alt="" /></span>
         <h1>{% tinycontent_simple 'winter_general_title' %}</h1>
         <p>{% tinycontent_simple 'winter_general_date' %}</br>
         <a target="_blank" rel="noopener" href="https://acrolama.com/events/winter-acro-festival-2022/">Registration</a></p>
