--- a/acrofestival/templates/pages/winteracro/snippets/footer.html
+++ b/acrofestival/templates/pages/winteracro/snippets/footer.html
@@ -1,10 +1,12 @@
 <!-- Footer -->{% load tinycontent_tags %}
           <footer id="footer">
             <section>
-              <h2>Acrolama</h2>
-              <p>Two lovely Acrobats who decided Acro made fun so it needs to spread. Why lama? Cause like, Who doesn't like lamas!?</p>
+              <h2>Winter Acro</h2>
+              <p>Founded by Acrolama, two lovely Acrobats who decided Acro made fun so it needs to spread.<br>
+                Organized by <a href="https://urbanacro.com">Urbanacro - Flying Toaster GmbH</a>
+              </p>
               <ul class="actions">
-                <li><a href="https://acrolama.com/" class="button">Learn more</a></li>
+                <li><a href="https://www.urbanacro.com/" class="button">Learn more</a></li>
               </ul>
             </section>
             <section>
@@ -13,14 +15,14 @@
                 <dt>Whatsapp</dt>
                 <dd>{% tinycontent_simple 'winter_general_whatsapp' %}</dd>
                 <dt>Email</dt>
-                <dd><a href="mailto:acrolama@acrolama.com">acrolama@acrolama.com</a></dd>
+                <dd><a href="mailto:hello@urbanacro.com">hello@urbanacro.com</a></dd>
               </dl>
               <ul class="icons">
-                <li><a href="https://facebook.com/acrolama/" class="icon fab fa-facebook-f  alt"><span class="label"></span></a></li>
-                <li><a href="https://instagram.com/acrolama/" class="icon fab fa-instagram alt"><span class="label"></span></a></li>
+                <li><a href="https://facebook.com/urbanacro.ch/" class="icon fab fa-facebook-f  alt"><span class="label"></span></a></li>
+                <li><a href="https://instagram.com/urban.acro/" class="icon fab fa-instagram alt"><span class="label"></span></a></li>
                 <li><a href="https://www.youtube.com/channel/UC9_46R-RgJlkN4DghDug3Kw/" class="icon fab fa-youtube alt"><span class="label"></span></a></li>
               </ul>
             </section>
-            <p class="copyright">&copy; Winter acro festival by acrolama. Design: Adrian Garate & Giulia Martinelli.</br>
+            <p class="copyright">&copy; Winter acro festival by urbanacro. Design: Adrian Garate & Giulia Martinelli.</br>
             Pictures by <a href="http://mad-motions.com">Matthias Bleisch</a> - Icons and others of: <a href="https://html5up.net">HTML5 UP</a>.</p>
           </footer>
