--- a/acrofestival/templates/pages/winteracro/index.html
+++ b/acrofestival/templates/pages/winteracro/index.html
@@ -59,7 +59,7 @@
                 </li>
                 <li>
                     <span class="icon major style1 fas fa-fire"></span>
-                    <h3>Sauna</h3>
+                    <h3>Wellness</h3>
                     <p>{% tinycontent_simple 'winter_home_sauna' %}
                     </p>
                     </li>
@@ -162,9 +162,9 @@
                         <p><h2>Kat & Jared - Duo Acrokatics</h2></p>
                         <p>
                         <span class="image left">
-                                <img src="{% static "winteracro/images/teachers2019/acrostandingacro.jpg"%}" alt="Standing Acro at the Winter Acro 2022">
+                            <img src="{% static "winteracro/images/teachers2024/urbanacro_winteracro_festival_acrokatics.png"%}" alt="Winter acro from urbanacro teacher acrokatics doing acro pose">
                         </span>
-                        Check them out at: <a href="https://www.instagram.com/acrolinks/">Arolinks on Insta</a>
+                        Check them out at: <a href="https://www.instagram.com/acrokatics/">Acrokatics on Instagram</a>
                         </p>
                         <p><h2>Bruno</h2></p>
                         <p>
@@ -176,7 +176,7 @@
                         <p><h2>Je & Cuzio - Acrolinks</h2></p>
                         <p>
                         <span class="image left">
-                            <img src="{% static "winteracro/images/teachers2019/alfonsoandceline.jpg"%}" alt="Wybren and Celine at the Winter Acro 2022">
+                            <img src="{% static "winteracro/images/teachers2024/urbanacro_winteracro_festival_acrolinks.png"%}" alt="Winter acro from urbanacro teacher acrolinks doing acro pose">
                         </span>
                         Icarian fanatics which bring us some smooth and creative tricks with a sprinkle of "Wow"<br>
                         Check them out at: <a href="https://www.instagram.com/acrolinks/">Arolinks on Insta</a>
