Pics for the Winter acro 2024

--- a/acrofestival/templates/pages/winteracro/index.html
+++ b/acrofestival/templates/pages/winteracro/index.html
@@ -63,12 +63,12 @@
                     <p>{% tinycontent_simple 'winter_home_sauna' %}
                     </p>
                     </li>
-                <li>
-                    <span class="icon major style7 fas fa-magic"></span>
-                    <h3>Show</h3>
-                    <p>{% tinycontent_simple 'winter_home_show' %}
-                    </p>
-                </li>
+                <!-- <li> -->
+                <!--     <span class="icon major style7 fas fa-magic"></span> -->
+                <!--     <h3>Show</h3> -->
+                <!--     <p>{% tinycontent_simple 'winter_home_show' %} -->
+                <!--     </p> -->
+                <!-- </li> -->
             </ul>
             <footer class="major">
                 <ul class="actions">
@@ -154,9 +154,9 @@
                 <header class="major">
                     <h2>{% tinycontent_simple 'winter_general_title' %} - Teachers</h2>
                 </header>
-                <p>
-                <u>Confirmed</u> teachers on the left. <u>To be confirmed</u> on the right. We'll keep you posted :)
-                </p>
+                <!-- <p> -->
+                <!-- <u>Confirmed</u> teachers on the left. <u>To be confirmed</u> on the right. We'll keep you posted :) -->
+                <!-- </p> -->
                 <div class="box alt">
                     <div class="row gtr-uniform">
                         <p><h2>Kat & Jared - Duo Acrokatics</h2></p>
@@ -164,22 +164,23 @@
                         <span class="image left">
                             <img src="{% static "winteracro/images/teachers2024/urbanacro_winteracro_festival_teachers_acrokatics.png"%}" alt="Winter acro from urbanacro teacher acrokatics doing acro pose">
                         </span>
+                        Awesome acrobats, teachers, and people! We have been trying to get them to come for years, but it's always hard with circus artists. Very happy to have them here teaching some duo and group acrobatics!<br>
                         Check them out at: <a href="https://www.instagram.com/acrokatics/">Acrokatics on Instagram</a>
-                        </p>
-                        <p><h2>Bruno</h2></p>
-                        <p>
-                        <span class="image left">
-                            <img src="{% static "winteracro/images/teachers2019/bruno.jpg"%}" alt="Bruno the master of improvisation, clown and show winter acro 2022"></img>
-                        </span>
-                        I had to laugh only from remembering Bruno! <u>Improvisation and staging</u> are he's strengths and passion. But it's hard to find the words to describe such a warm hearted clown, you just have to meet him. Happy to have you with us my friend!
                         </p>
                         <p><h2>Je & Cuzio - Acrolinks</h2></p>
                         <p>
                         <span class="image left">
                             <img src="{% static "winteracro/images/teachers2024/urbanacro_winteracro_festival_teachers_acrolinks.png"%}" alt="Winter acro from urbanacro teacher acrolinks doing acro pose">
                         </span>
-                        Icarian fanatics which bring us some smooth and creative tricks with a sprinkle of "Wow"<br>
+                        Icarian fanatics from Italy who bring us some smooth and creative tricks with a sprinkle of "Wow."<br>
                         Check them out at: <a href="https://www.instagram.com/acrolinks/">Arolinks on Insta</a>
+                        </p>
+                        <p><h2>Bruno</h2></p>
+                        <p>
+                        <span class="image left">
+                            <img src="{% static "winteracro/images/teachers2019/bruno.jpg"%}" alt="Bruno the master of improvisation, clown and show winter acro 2022"></img>
+                        </span>
+                        I had to laugh only from remembering Bruno! <u>Improvisation and staging</u> are he's strengths and passion. It's hard to find the words to describe such a warm hearted clown, you just have to meet him. Happy to have you with us my friend!
                         </p>
                     </div>
             </div>
@@ -207,7 +208,7 @@
                 </div>
         </section>
         <!---Schedule -->
-        <section id="schedule" class="main special">k
+        <section id="schedule" class="main special">
             <header class="major">
                 <h2>Schedule</h2>
                 <p>{% tinycontent_simple 'winter_home_schedule' %}
