--- a/acrofestival/templates/pages/winteracro/location.html
+++ b/acrofestival/templates/pages/winteracro/location.html
@@ -13,13 +13,13 @@
         <!-- Content -->
         <section id="accommodation" class="main">
             <span class="image main">
-                <img src="{% static "winteracro/images/pic04.jpg"%}" alt="lenk accomodation for the winter acro festival" />
+                <img src="{% static "winteracro/images/tschlin_winter_acro_urbanacro.webp"%}" alt="Tschlin location of the winter acro festival" />
             </span>
             <h1>Accommodation</h1>
             <h2>Main House</h2>
             <p>
             <span class="image right">
-                    <img src="{% static "winteracro/images/pic05.jpg" %}" alt="winter acromodation for the acrolama winter acro festival" />
+                    <img src="{% static "winteracro/images/rooms_winter_acro_urbanacro.jpg" %}" alt="winter accommodation for the urbanacro winter acro festival" />
             </span>
             {% tinycontent_simple 'winter_accomodation_description' %}
             <h3>Dorms</h3>
