--- a/acrofestival/templates/pages/winteracro/prices.html
+++ b/acrofestival/templates/pages/winteracro/prices.html
@@ -12,7 +12,7 @@
         <div id="main">
             <!-- Content -->
             <section id="content" class="main">
-                <span class="image main"><img src="{% static "winteracro/images/pic07.jpg"%}" alt="" /></span>
+                <span class="image main"><img src="{% static "winteracro/images/hall_winter_acro_urbanacro.jpg"%}" alt="Hall for the Winter acro festival in tschlin by urbanacro" /></span>
                 <h2>Festival passes</h2>
                 <p>{% tinycontent_simple 'winter_prices_description' %}
                 <h3>Price list</h3>
