--- a/acrofestival/templates/pages/winteracro/index.html
+++ b/acrofestival/templates/pages/winteracro/index.html
@@ -7,7 +7,7 @@
             <span class="logo"><img src="{% static "winteracro/images/logo_2024.png"%}" alt="" /></span>
         <h1>{% tinycontent_simple 'winter_general_title' %}</h1>
         <p>{% tinycontent_simple 'winter_general_date' %}</br>
-        <a target="_blank" rel="noopener" href="https://acrolama.com/events/winter-acro-festival-2022/">Registration</a></p>
+        <a target="_blank" rel="noopener" href="https://urbanacro.com/events/winter-acro-2024/">Registration</a></p>
     </header>
     {% include 'pages/winteracro/snippets/navhome.html' %}
 <!-- Main -->
@@ -24,7 +24,7 @@
                         </p>
                     <ul class="actions">
                         <li>
-                            <a style="box-shadow:0px 0px; background:#f3d216;" target="_blank" rel="noopener" href="https://urbanacro.com/events/winter-acro-festival-2022/" class="button">
+                            <a style="box-shadow:0px 0px; background:#f3d216;" target="_blank" rel="noopener" href="https://urbanacro.com/events/winter-acro-2024/" class="button">
                                 Register
                             </a>
                         </li>
@@ -73,7 +73,7 @@
             <footer class="major">
                 <ul class="actions">
                     <li>
-                        <a style="box-shadow: 0px 0px; background:#f3d216;" target="_blank" rel="noopener" href="https://acrolama.com/events/winter-acro-festival-2022/" class="button">Registration</a>
+                        <a style="box-shadow: 0px 0px; background:#f3d216;" target="_blank" rel="noopener" href="https://urbanacro.com/events/winter-acro-2024/" class="button">Registration</a>
                     </li>
                 </ul>
             </footer>
@@ -83,32 +83,32 @@
                         <div class="row gtr-uniform">
                                 <div class="col-4">
                                     <span class="image fit">
-                                        <img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_3high.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" />
+                                        <img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_3high.jpg"%}" alt="Winter Acro Festival Lenk Star - Urbanacro" />
                                     </span>
                                 </div>
                                 <div class="col-4">
                                     <span class="image fit">
-                                        <img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_kiss.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" />
+                                        <img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_kiss.jpg"%}" alt="Winter Acro Festival Lenk Star - Urbanacro" />
                                     </span>
                                 </div>
                                 <div class="col-4">
                                     <span class="image fit">
-                                        <img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_snow2.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" />
+                                        <img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_snow2.jpg"%}" alt="Winter Acro Festival Lenk Star - Urbanacro" />
                                     </span>
                                 </div>
                                 <div class="col-4">
                                     <span class="image fit">
-                                        <img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_snow.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" />
+                                        <img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_snow.jpg"%}" alt="Winter Acro Festival Lenk Star - Urbanacro" />
                                     </span>
                                 </div>
                                 <div class="col-4">
                                     <span class="image fit">
-                                        <img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_sauna.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" />
+                                        <img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_sauna.jpg"%}" alt="Winter Acro Festival Lenk Star - Urbanacro" />
                                     </span>
                                 </div>
                                 <div class="col-4">
                                     <span class="image fit">
-                                        <img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_hall.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" />
+                                        <img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_hall.jpg"%}" alt="Winter Acro Festival Lenk Star - Urbanacro" />
                                     </span>
                                 </div>
                         </div>
@@ -143,7 +143,7 @@
             <footer class="major">
                 <ul class="actions">
                     <li>
-                    <a style="box-shadow: 0px 0px; background:#f3d216;" target="_blank" rel="noopener" href="https://acrolama.com/events/winter-acro-festival-2022/" class="button">
+                    <a style="box-shadow: 0px 0px; background:#f3d216;" target="_blank" rel="noopener" href="https://urbanacro.com/events/winter-acro-2024/" class="button">
                         Register
                     </a>
                     </li>
@@ -178,7 +178,7 @@
                         <p><h2>Bruno</h2></p>
                         <p>
                         <span class="image left">
-                            <img src="{% static "winteracro/images/teachers2019/bruno.jpg"%}" alt="Bruno the master of improvisation, clown and show winter acro 2022"></img>
+                            <img src="{% static "winteracro/images/teachers2019/bruno.jpg"%}" alt="Bruno the master of improvisation, clown and show winter acro 2024"></img>
                         </span>
                         I had to laugh only from remembering Bruno! <u>Improvisation and staging</u> are he's strengths and passion. It's hard to find the words to describe such a warm hearted clown, you just have to meet him. Happy to have you with us my friend!
                         </p>
@@ -192,18 +192,18 @@
                 </header>
                 <div class="box alt">
                         <div class="row gtr-uniform">
-                                <div class="col-4"><span class="image fit"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_3Manhigh.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" /></span></div>
-                                <div class="col-4"><span class="image fit"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_Icarian.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" /></span></div>
-                                <div class="col-4"><span class="image fit"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_Slackline.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" /></span></div>
-                                <div class="col-3"><span class="image fit"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_Snow.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" /></span></div>
-                                <div class="col-4"><span class="image fit"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_3manhigh_2.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" /></span></div>
-                                <div class="col-4"><span class="image fit"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_Acroyoga3.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" /></span></div>
-                                <div class="col-4"><span class="image fit"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_Mira.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" /></span></div>
-                                <div class="col-4"><span class="image fit"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_Acroyoga1.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" /></span></div>
-                                <div class="col-4"><span class="image fit"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_Onearm.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" /></span></div>
-                                <div class="col-4"><span class="image fit"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_show.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" /></span></div>
-                                <div class="col-4"><span class="image fit"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_Star.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" /></span></div>
-                                <div class="col-4"><span class="image fit"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_turnhalle.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" /></span></div>
+                                <div class="col-4"><span class="image fit"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_3Manhigh.jpg"%}" alt="Winter Acro Festival Lenk Star - Urbanacro" /></span></div>
+                                <div class="col-4"><span class="image fit"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_Icarian.jpg"%}" alt="Winter Acro Festival Lenk Star - Urbanacro" /></span></div>
+                                <div class="col-4"><span class="image fit"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_Slackline.jpg"%}" alt="Winter Acro Festival Lenk Star - Urbanacro" /></span></div>
+                                <div class="col-3"><span class="image fit"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_Snow.jpg"%}" alt="Winter Acro Festival Lenk Star - Urbanacro" /></span></div>
+                                <div class="col-4"><span class="image fit"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_3manhigh_2.jpg"%}" alt="Winter Acro Festival Lenk Star - Urbanacro" /></span></div>
+                                <div class="col-4"><span class="image fit"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_Acroyoga3.jpg"%}" alt="Winter Acro Festival Lenk Star - Urbanacro" /></span></div>
+                                <div class="col-4"><span class="image fit"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_Mira.jpg"%}" alt="Winter Acro Festival Lenk Star - Urbanacro" /></span></div>
+                                <div class="col-4"><span class="image fit"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_Acroyoga1.jpg"%}" alt="Winter Acro Festival Lenk Star - Urbanacro" /></span></div>
+                                <div class="col-4"><span class="image fit"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_Onearm.jpg"%}" alt="Winter Acro Festival Lenk Star - Urbanacro" /></span></div>
+                                <div class="col-4"><span class="image fit"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_show.jpg"%}" alt="Winter Acro Festival Lenk Star - Urbanacro" /></span></div>
+                                <div class="col-4"><span class="image fit"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_Star.jpg"%}" alt="Winter Acro Festival Lenk Star - Urbanacro" /></span></div>
+                                <div class="col-4"><span class="image fit"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_turnhalle.jpg"%}" alt="Winter Acro Festival Lenk Star - Urbanacro" /></span></div>
                         </div>
                 </div>
         </section>
